Identation in CSS file fixed to improve readability

--- a/mycookbook/static/css/background_forms.css
+++ b/mycookbook/static/css/background_forms.css
@@ -3,8 +3,9 @@ for different extended templates (implementing  'request.endpoint') is taken fro
 https://stackoverflow.com/questions/52604210/jinja-using-a-different-css-for-each-extended-template*/
 /*Background-image for all form pages(login, register, change username, change password)*/
 main {
-background-image: radial-gradient(rgba(249, 238, 238, 0.91), rgba(152, 142, 142, 0.04)), url(../img/forms-bg.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center;
+    background-image: radial-gradient(rgba(249, 238, 238, 0.91),
+                    rgba(152, 142, 142, 0.04)), url(../img/forms-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
